--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,8 @@
 version: "3.8"
 services:
   react:
+    image: ${IMAGE_NAME}
+    container_name: ${CONTAINER_NAME}
     build:
       context: .
       dockerfile: ./Dockerfile
