--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,10 +12,10 @@ services:
       - /etc/passwd:/etc/passwd:ro # Valid only if the host OS is Linux
       - /etc/group:/etc/group:ro # Valid only if the host OS is Linux
       - home:/home
-    command: >
-      /bin/sh -c "while sleep 1000; do :; done"
     ports:
       - ${IP}:22:22
+    stdin_open: true
+    tty: true
 volumes:
   home:
     name: ${VOLUME_NAME}
