--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 IMAGE_NAME = naoyaogura/develop-react
-CONTAINER_NAME = Dev_React
+CONTAINER_NAME = React
 USER_NAME = NaoyaOgura
 VOLUME_NAME = React
-NETWORK_NAME = Dev_React
+NETWORK_NAME = React
 IP = 127.0.0.5
