FIX: Modify due to GitHub specification changes FIX: Adhere to Dockerfile best practices FIX: Elimination of .devcontainer FIX: Setup alias

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-IMAGE_NAME = naoyaogura/develop-react
-CONTAINER_NAME = React
+DOCKER_IMAGE_TAG = 9.2
+IMAGE_NAME = naoyaogura/develop-react:latest
+CONTAINER_NAME = DevelopReact
+VOLUME_NAME = DevelopReact
+NETWORK_NAME = DevelopReact
 USER_NAME = NaoyaOgura
-VOLUME_NAME = React
-NETWORK_NAME = React
-IP = 127.0.0.5
