FIX: Changed the base OS to ubuntu

--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
-DOCKER_IMAGE_TAG = 9.3
+DOCKER_IMAGE_TAG = 22.04
 IMAGE_NAME = naoyaogura/develop-react:latest
 CONTAINER_NAME = DevelopReact
 VOLUME_NAME = DevelopReact
 NETWORK_NAME = DevelopReact
 USER_NAME = NaoyaOgura
+NODEJS_MAJOR_VERSION=20
