--- a/react/Dockerfile
+++ b/react/Dockerfile
@@ -1,27 +1,34 @@
 # Set the base image
 ARG DOCKER_IMAGE_TAG=${DOCKER_IMAGE_TAG}
-FROM rockylinux:${DOCKER_IMAGE_TAG}
+FROM ubuntu:${DOCKER_IMAGE_TAG}
 
 # Set ARG
 ARG TZ=Asia/Tokyo
 ARG USER_NAME=${USER_NAME}
+ARG NODEJS_MAJOR_VERSION=${NODEJS_MAJOR_VERSION}
 
 # Set TimeZone
-RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
+RUN ln -snf /usr/share/zoneinfo/${TZ} /etc/localtime && echo ${TZ} > /etc/timezone
 
 # Repository Update
-RUN dnf update -y
+RUN apt-get update -y &&\
+    apt-get upgrade -y
 
 # Install Packages
-RUN dnf install sudo -y &&\
-    dnf install git -y &&\
-    dnf install unzip -y
-
-# Get the latest version of node.js from the NodeSource repository
-RUN curl -fsSL https://rpm.nodesource.com/setup_current.x | bash -
+RUN apt-get install curl -y &&\
+    apt-get install git -y &&\
+    apt-get install gnupg2 -y &&\
+    apt-get install software-properties-common -y &&\
+    apt-get install sudo -y &&\
+    apt-get install unzip -y &&\
+    apt-get install vim -y &&\
+    apt-get install wget -y &&\
+    apt-get install zip -y
 
 # Install node.js
-RUN dnf install nodejs -y
+RUN curl -sL https://deb.nodesource.com/setup_${NODEJS_MAJOR_VERSION}.x -o nodesource_setup.sh &&\
+    bash nodesource_setup.sh &&\
+    apt-get install nodejs -y
 
 # Install yarn
 RUN npm install yarn -g
@@ -30,18 +37,10 @@ RUN npm install yarn -g
 RUN yarn global add create-react-app
 
 # Add User
-RUN adduser ${USER_NAME} --badname
+RUN adduser ${USER_NAME} --force-badname
 
 # Setup to use sudo without password
 RUN echo "${USER_NAME} ALL=NOPASSWD: ALL" >> /etc/sudoers
 
 # Setup WORKDIR
 WORKDIR /home/${USER_NAME}
-
-# Change User
-USER ${USER_NAME}
-
-# Setup alias
-COPY ./.alias /home/${USER_NAME}/
-RUN cat ~/.alias >> ~/.bashrc &&\
-    rm .alias
