--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DOCKER_IMAGE_TAG = 22.04
+BASE_IMAGE_TAG = 22.04
 IMAGE_NAME = naoyaogura/develop-react:latest
 CONTAINER_NAME = DevelopReact
 VOLUME_NAME = DevelopReact
