--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       context: ./react
       dockerfile: Dockerfile
       args:
-        - DOCKER_IMAGE_TAG=${DOCKER_IMAGE_TAG}
+        - BASE_IMAGE_TAG=${BASE_IMAGE_TAG}
         - USER_NAME=${USER_NAME}
         - NODEJS_MAJOR_VERSION=${NODEJS_MAJOR_VERSION}
     volumes:
